--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "forms-user-input",
   "version": "0.1.0",
+  "homepage": "https://ekramkhan9304.github.io/forms-user-input",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -14,6 +15,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
